Update 'w5xsa4le6-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:d5e798847b88dff6751a2b7831559cd39edc61e6@sha256:4e6c9050c252e5343d2f5e357db2494d18c845d7663537b683682af730347c7a

--- a/components/w5xsa4le6-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/w5xsa4le6-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: w5xsa4le6-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:d5e798847b88dff6751a2b7831559cd39edc61e6@sha256:4e6c9050c252e5343d2f5e357db2494d18c845d7663537b683682af730347c7a
+          name: container-image
